--- a/BIZspot-frontend/src/app/review-list/review-list.component.html
+++ b/BIZspot-frontend/src/app/review-list/review-list.component.html
@@ -1,3 +1,3 @@
-<div class="business-page-reviews-list" *ngFor="let review of this.reviews">
+<div class="business-page-reviews-list" *ngFor="let review of reviews">
 		<app-review [review]="review"></app-review>
 </div>
