--- a/BIZspot-frontend/src/app/business/business.component.html
+++ b/BIZspot-frontend/src/app/business/business.component.html
@@ -1,23 +1,24 @@
-<div class="business">
-	<div class="business-box">
+<div class="business" (click)="checkDetails()">
+  <div class="business-box">
 
-		<div class="business-picture">
-			<img *ngIf="!business.thumbnail" src="assets/img/business.jpg" alt="" >
-			<img *ngIf="business.thumbnail" [src]="business.thumbnail" alt="">
-		</div>
-		<div class="business-data">
-			<h2 class="business-title">
-				{{business.title}}
-			</h2>
-			<p class="business-description">
-				{{business.about}}				
-			</p>
-			<a class="business-btn" *ngIf="showDetails" (click)="goToDetails()">Details</a>
-		</div>
-	</div>
-	<div *ngIf="isReviewsLoaded">
-		
-		<app-review></app-review>
-		<a href="" class="review-btn" *ngIf="checkReviews">&#17;</a>
-	</div>
+    <div class="business-picture">
+      <img *ngIf="!business?.thumbnail" src="assets/img/business.jpg" alt="">
+      <img *ngIf="business?.thumbnail" [src]="business.thumbnail" alt="">
+    </div>
+    <div class="business-data">
+      <h2 class="business-title">
+        {{business?.title || 'Testing Title'}}
+      </h2>
+      <p class="business-description">
+        {{business?.about || 'Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quibusdam, impedit quaerat ea
+        nihil laborum quas magnam maxime maiores aliquam ducimus quidem enim atque culpa. Aut recusandae quam voluptate et.'}}
+      </p>
+      <a class="business-btn" *ngIf="showDetails" (click)="goToDetails()">Details</a>
+    </div>
+  </div>
+  <div *ngIf="isReviewsLoaded">
+
+    <app-review></app-review>
+    <a href="" class="review-btn" *ngIf="checkReviews">&#17;</a>
+  </div>
 </div>
