--- a/BIZspot-frontend/src/app/search/search.component.html
+++ b/BIZspot-frontend/src/app/search/search.component.html
@@ -45,24 +45,82 @@
       </div>
     </form>
   </div>
-
-  <div class="row search-box-down">
+  <!-- placeholder card -->
+  <div
+    class="row search-box-down"
+    *ngIf="filteredBusinesses.matches.length == 0"
+  >
     <div class="col-1-of-3">
-      <app-business [showDetails]="false"></app-business>
-      <app-business></app-business>
-      <app-business></app-business>
-      <app-business></app-business>
-      <app-business></app-business>
+      <div class="business">
+        <div class="business-box">
+          <div class="business-picture">
+            <img src="assets/img/placeholder_0.jpg" alt="" />
+            <img src="business.thumbnail" alt="" />
+          </div>
+          <div class="business-data">
+            <h2 class="business-title"></h2>
+            <p class="business-description"></p>
+            <p class="business-description-md"></p>
+            <a class="business-btn">Details</a>
+          </div>
+        </div>
+        <div>
+          <app-review></app-review>
+          <a href="" class="review-btn">&#17;</a>
+        </div>
+      </div>
     </div>
     <div class="col-1-of-3">
-      <app-business></app-business>
-      <app-business></app-business>
-      <app-business></app-business>
+      <div class="business">
+        <div class="business-box">
+          <div class="business-picture">
+            <img src="assets/img/placeholder_0.jpg" alt="" />
+            <img src="business.thumbnail" alt="" />
+          </div>
+          <div class="business-data">
+            <h2 class="business-title"></h2>
+            <p class="business-description"></p>
+            <p class="business-description-md"></p>
+            <a class="business-btn">Details</a>
+          </div>
+        </div>
+        <div>
+          <app-review></app-review>
+          <a href="" class="review-btn">&#17;</a>
+        </div>
+      </div>
     </div>
     <div class="col-1-of-3">
-      <app-business></app-business>
-      <app-business></app-business>
-      <app-business></app-business>
+      <div class="business">
+        <div class="business-box">
+          <div class="business-picture">
+            <img src="assets/img/placeholder_0.jpg" alt="" />
+            <img src="business.thumbnail" alt="" />
+          </div>
+          <div class="business-data">
+            <h2 class="business-title"></h2>
+            <p class="business-description"></p>
+            <p class="business-description-md"></p>
+            <a class="business-btn">Details</a>
+          </div>
+        </div>
+        <div>
+          <app-review></app-review>
+          <a href="" class="review-btn">&#17;</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- maximum 3 biz cards in each row -->
+  <div
+    class="row search-box-down"
+    *ngFor="let row of Arr(getRows()).fill(1); let idx = index"
+  >
+    <div
+      class="col-1-of-3"
+      *ngFor="let biz of filteredBusinesses.matches | slice: idx * 3:idx + 3"
+    >
+      <app-business [business]="biz"></app-business>
     </div>
   </div>
 </main>
