--- a/BIZspot-frontend/src/app/signup/signup.component.html
+++ b/BIZspot-frontend/src/app/signup/signup.component.html
@@ -7,24 +7,16 @@
   </head>
   <body>
     <main class="signup">
-      <div *ngIf="errorMessage" class="alert alert-danger">
-        {{ errorMessage }}
-      </div>
+      
 
       <div class="row signup-container">
-        <p-messages [(value)]="msgs"></p-messages>
-
+        
         <h1 class="signup-heading">Sign Up</h1>
+        <div *ngFor="let notif of notificationService.getNotifications()">
+          <app-notification [message]="notif.text" [type]="notif.type"></app-notification>
+        </div>
         <form [formGroup]="signupForm" (submit)="onSubmit()">
-          <label for="file" class="creation-btn">
-            Choose Profile Picture
-          </label>
-          <input 
-            id="file" type="file" value="Choose a picture" 
-            class="creation-btn" style="visibility:hidden;"
-            formControlName="profile_pic" (change)="showPreviewImage($event)">
-          <img [src]="profile_pic_path" *ngIf="profile_pic_path" class="imgPlaceholder" height="200" width="200">
-          <input
+         <input
             type="text"
             value=""
             placeholder="First Name"
