--- a/BIZspot-frontend/src/styles.css
+++ b/BIZspot-frontend/src/styles.css
@@ -1900,13 +1900,18 @@ body {
   position: relative;
   right: -12rem;
   border-radius: 1rem;
+  overflow: hidden;
+}
+
+.section-story__right > img {
+  width: 100%;
+  height: auto;
   background-size: cover;
   background-image: linear-gradient(
       to bottom,
       rgba(91, 232, 155, 0),
       rgba(91, 232, 155, 0.8)
-    ),
-    url(assets/img/right_bg.jpg);
+    )
 }
 
 .section-pricing {
